--- a/testing/br03.html
+++ b/testing/br03.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="./css/br03.css">
 </head>
 <body>
-  <p>br03</p>
+  <div class="wrap-box">
+    <p>BR03 - FIRST</p>
+    <p>BR03 - SECOND</p>
+  </div>
 </body>
 </html>
