add wrap-box br02

--- a/testing/br02.html
+++ b/testing/br02.html
@@ -8,6 +8,10 @@
   <link rel="stylesheet" href="./css/br02.css">
 </head>
 <body>
-  <p>br02</p>
+  <div class="wrap-box">
+    <p>BR02 - FRIST</p>
+    <p>BR02 - SECOND</p>
+  </div>
+
 </body>
 </html>
