--- a/testing/br01.html
+++ b/testing/br01.html
@@ -5,8 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BR01</title>
+  <link rel="stylesheet" href="./css/br01.css">
 </head>
 <body>
-  <p>br01 branch</p>
+  <div class="wrap-box">
+    <p>BR01 - FIRST</p>
+    <p>BR01 - SECOND</p>
+  </div>
 </body>
 </html>
